--- a/Epsiode - 1/package.json
+++ b/Epsiode - 1/package.json
@@ -1,7 +1,6 @@
 {
   "name": "epsiode---1",
   "version": "1.0.0",
-  "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +12,12 @@
   "description": "",
   "devDependencies": {
     "parcel": "^2.14.3"
-  }
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
