--- a/Epsiode - 1/package.json
+++ b/Epsiode - 1/package.json
@@ -2,6 +2,8 @@
   "name": "epsiode---1",
   "version": "1.0.0",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
