--- a/React JS Basics/package.json
+++ b/React JS Basics/package.json
@@ -16,9 +16,11 @@
     "parcel": "^2.14.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.0",
     "tailwindcss": "^4.1.3"
   },
